# Sentinel-Real-Time-Fraud-Detection-Engine

./: README.md
git2/: Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  rust-toolchain.toml
git2/clickhouse/: init.sql
git2/config/: rules.json
git2/grafana/dashboards/: fraud-detection.json
git2/grafana/provisioning/dashboards/: dashboard.yml
git2/grafana/provisioning/datasources/: datasource.yml
git2/k6/: README.md  load-test.js
git2/prometheus/: prometheus.yml
git2/scripts/: setup.sh  test-api.sh
git2/src/: engine.rs  main.rs  models.rs  rules.rs
git2/src/api/: handlers.rs
git2/src/storage/: redis.rs
